# grape_vine_classification_group_51

./: .gitignore  .pre-commit-config.yaml  MLOps_Project_Checklist.md  README.md  cloud_build.sh  cloud_config.yaml  cloud_train.sh  cloudbuild_backend.yaml  cloudbuild_frontend.yaml  data.dvc  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: enforce_tests.yaml  linting.yaml  pipeline.yaml  tests.yaml  unit_tests.yaml
app/: frontend.py  onnx_api.py  requirements_backend.txt  requirements_frontend.txt
configs/: cloud_api_requirements.txt  config.yaml  exp1.yaml  sweep1.yaml  sweep1_lightning.yaml  test.yaml
configs/experiment/: exp1.yaml
data/processed_dataset/: test_data.pt  train_data.pt
dockerfiles/: api.dockerfile  backend.dockerfile  cloud_api.dockerfile  data_drift_monitoring.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_10/: metrics.csv
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_2/: metrics.csv
lightning_logs/version_3/: metrics.csv
models/: epoch=0-step=25-v1.ckpt  epoch=0-step=25.ckpt  epoch=1-step=50.ckpt  epoch=2-step=75-v1.ckpt  epoch=2-step=75.ckpt  epoch=3-step=100-v1.ckpt  epoch=3-step=100-v2.ckpt  epoch=3-step=100.ckpt  epoch=4-step=125-v1.ckpt  epoch=4-step=125-v2.ckpt  epoch=4-step=125-v3.ckpt  epoch=4-step=125-v4.ckpt  epoch=4-step=125-v5.ckpt  epoch=4-step=125.ckpt  trained_model.pth
profiling/: profilig.py  train_profile.txt
reports/: README.md
tests/: __init__.py  locustfile.py  test_api.py  test_data.py  test_model.py  test_onnx.py  test_raises.py  test_train.py
wandb/: latest-run
(+200 files in other folders)
