[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "grape_vine_classification"
version = "0.0.1"
description = "grape vine classification using ML"
authors = [
  { name = "MLOPS group 51", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "kagglehub>=0.4.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "matplotlib>=3.10.8",
    "dvc-gs>=3.0.2",
    "pytorch-lightning>=2.6.0",
    "pytest>=8.3.4",
    "scikit-learn>=1.8.0",
    "wandb>=0.24.0",
    "pillow>=10.0",
    "pydantic>=2.5",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "dvc>=3.65.0",
    "dvc-gdrive>=3.0.1",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "streamlit>=1.53.0",
    "google-cloud-run>=0.14.0",
    "python-multipart>=0.0.9",
    "google-api-python-client>=2.187.0",
    "timeout-decorator>=0.5.0",
    "pandas>=2.3.3",
    "evidently>=0.7.20",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.8.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "pre-commit==4.1.0",
    "locust>=2.43.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
